[gd_scene load_steps=2 format=3 uid="uid://hu6l7uh84cr4"]

[ext_resource type="Script" uid="uid://c88qlgphl70qq" path="res://game/stages/windows/custom_window_title_bar.gd" id="1_fcfnp"]

[node name="CustomWindowTitleBar" type="HBoxContainer"]
script = ExtResource("1_fcfnp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "GAZE"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
